--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>Daniel Alvarez</title>
-</head>
-<body>
-	<h1>This is my website!!!!</h1>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>Daniel Alvarez | My Personal Portfolio</title>
+		<link rel="stylesheet" href="css/styles.css">
+	</head>
+	<body>
+		<include src="./common/header.html"></include>
+		<div class="content">
+			<h1 id="index-title" class="animation-typewritter"> Hi, I am Daniel, <br>full stack web developer</h1>
+			<h2 id="index-subtitle">How can I help you?</h2>
+			<div id="btn-box-call-to-action">
+			<button class="cta-main-button">Hire Me</button>
+			<button class="cta-secondary-button">Chat With Me</button>
+		</div>
+		</div>
+		<p class="random-text random-text-right"></p>
+		<p class="random-text random-text-left"></p>
+	</body>
 </html>
+
+
+<script src="js/include_html_in_html.js"></script>
+<script src="js/random_text_generator.js"></script>
+<script src="js/typewritter.js"></script>
