[ADD] Animaciones y botones

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 			<h1 id="index-title" class="animation-typewritter"> Hi, I am Daniel, <br>full stack web developer</h1>
 			<h2 id="index-subtitle">How can I help you?</h2>
 			<div id="btn-box-call-to-action">
-			<button class="cta-main-button">Hire Me</button>
-			<button class="cta-secondary-button">Chat With Me</button>
-		</div>
+				<button id="cta-button-hire-me" class="cta-main-button">Hire Me</button>
+				<button id="chat-button-chat-with-me" class="cta-secondary-button">Chat With Me</button>
+			</div>
 		</div>
 		<p class="random-text random-text-right"></p>
 		<p class="random-text random-text-left"></p>
@@ -24,3 +24,4 @@
 <script src="js/include_html_in_html.js"></script>
 <script src="js/random_text_generator.js"></script>
 <script src="js/typewritter.js"></script>
+<script src="js/styles_on_load.js"></script>
